# foxplots

./: README.md  pyproject.toml
src/foxplots/: __init__.py
