[project]
name = "foxplots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "staticf0x", email = "staticf0x@pm.me" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
